Atualizei a base de dados. Alterei o nome para AspNetCoreUdemy, Criei a Classe ApplicationUser com Apelido, NomeCompleto e DataNascimento e limpamos as listas e as ViewComponents

--- a/src/Cooperchip.ITDeveloper.Mvc/appsettings.json
+++ b/src/Cooperchip.ITDeveloper.Mvc/appsettings.json
@@ -1,5 +1,4 @@
 {
-  "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Cooperchip.ITDeveloper.Mvc;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "SendGridUser": "CursoAspNetCoreUdemy",
+  "SendGridKey": "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"
 }
