--- a/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
+++ b/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
@@ -1061,6 +1061,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\Cooperchip.ITDeveloper.Application\Cooperchip.ITDeveloper.Application.csproj" />
     <ProjectReference Include="..\Cooperchip.ITDeveloper.Data\Cooperchip.ITDeveloper.Data.csproj" />
   </ItemGroup>
 
