Primeira versão de importação e listagem de Cid ok com o uso do Bloco de Notas, também sobreescrevi o bundleconfig.json e libman.json do artigo do medium para o projeto.

--- a/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
+++ b/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
@@ -1065,4 +1065,9 @@
     <ProjectReference Include="..\Cooperchip.ITDeveloper.Data\Cooperchip.ITDeveloper.Data.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\importFile\" />
+  </ItemGroup>
+
 </Project>
