IUserInContext, AspNetUser e ClaimsPrincipalExtensions, incluindo a DI na Startup

--- a/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
+++ b/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
@@ -54,6 +54,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cooperchip.ITDeveloper.Application\Cooperchip.ITDeveloper.Application.csproj" />
+    <ProjectReference Include="..\Cooperchip.ITDeveloper.CrossCutting\Cooperchip.ITDeveloper.CrossCutting.csproj" />
     <ProjectReference Include="..\Cooperchip.ITDeveloper.Data\Cooperchip.ITDeveloper.Data.csproj" />
   </ItemGroup>
 
