--- a/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
+++ b/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.9" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
 
 
