Refatorando ServiceApplication ao Invés de usar serviço em Repositório, Aboradando futuras refatorações e usando repository em Inser e Edit em PacienteController

--- a/src/Cooperchip.ITDeveloper.Application/Cooperchip.ITDeveloper.Application.csproj
+++ b/src/Cooperchip.ITDeveloper.Application/Cooperchip.ITDeveloper.Application.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cooperchip.ITDeveloper.Data\Cooperchip.ITDeveloper.Data.csproj" />
+    <ProjectReference Include="..\Cooperchip.ITDeveloper.Repository\Cooperchip.ITDeveloper.Repository.csproj" />
   </ItemGroup>
 
 </Project>
