--- a/src/Cooperchip.ITDeveloper.DomainCore/Cooperchip.ITDeveloper.DomainCore.csproj
+++ b/src/Cooperchip.ITDeveloper.DomainCore/Cooperchip.ITDeveloper.DomainCore.csproj
@@ -1,7 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Validation\" />
+  </ItemGroup>  
+  
 
 </Project>
