--- a/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
+++ b/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <UserSecretsId>b3c8d2d8-5814-43f8-99a5-e1baf75e3240</UserSecretsId>
   </PropertyGroup>
@@ -18,38 +18,33 @@
     <Compile Remove="Migrations\20200814022045_AddGenericoAppDbContext-02.Designer.cs" />
   </ItemGroup>
 
-  <ItemGroup>
-    <None Include="bin\Debug\netcoreapp3.1\Csv\Bairro.CSV" />
-    <None Include="bin\Debug\netcoreapp3.1\Csv\Cid.CSV" />
-    <None Include="bin\Debug\netcoreapp3.1\Csv\Cidade.CSV" />
-    <None Include="bin\Debug\netcoreapp3.1\Csv\Generico.CSV" />
-    <None Include="bin\Debug\netcoreapp3.1\Csv\Medicamentos.CSV" />
-  </ItemGroup>
-
 
   <ItemGroup>
 
-    <PackageReference Include="kisslog.AspNetCore" Version="2.5.3" />
+    <PackageReference Include="kisslog.AspNetCore" Version="2.5.6" />
 
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
 
-    <PackageReference Include="Microsoft.AspNetCore.Components.Analyzers" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Analyzers" Version="5.0.6" />
 
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="3.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.9" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
 
 
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
-    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
-    <PackageReference Include="SendGrid" Version="9.12.0" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.1" />
-    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.0.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
+    <PackageReference Include="SendGrid" Version="9.23.2" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.1.0" />
   </ItemGroup>
 
 
