Repositorio e Application Corrigidos, projeto Repositry to Data

--- a/src/Cooperchip.ITDeveloper.DomainCore/Cooperchip.ITDeveloper.DomainCore.csproj
+++ b/src/Cooperchip.ITDeveloper.DomainCore/Cooperchip.ITDeveloper.DomainCore.csproj
@@ -5,8 +5,11 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  
   <ItemGroup>
-    <Folder Include="Validation\" />
+    <Compile Remove="Validation\**" />
+    <EmbeddedResource Remove="Validation\**" />
+    <None Remove="Validation\**" />
   </ItemGroup>  
   
 
