--- a/src/Cooperchip.ITDeveloper.Application/Cooperchip.ITDeveloper.Application.csproj
+++ b/src/Cooperchip.ITDeveloper.Application/Cooperchip.ITDeveloper.Application.csproj
@@ -10,7 +10,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cooperchip.ITDeveloper.Data\Cooperchip.ITDeveloper.Data.csproj" />
-    <ProjectReference Include="..\Cooperchip.ITDeveloper.Repository\Cooperchip.ITDeveloper.Repository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
