Created new Features to ServicoApplicacaoPaciente

--- a/src/Cooperchip.ITDeveloper.Application/Cooperchip.ITDeveloper.Application.csproj
+++ b/src/Cooperchip.ITDeveloper.Application/Cooperchip.ITDeveloper.Application.csproj
@@ -5,15 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Cooperchip.ITDeveloper.Data\Cooperchip.ITDeveloper.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
