--- a/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
+++ b/src/Cooperchip.ITDeveloper.Mvc/Cooperchip.ITDeveloper.Mvc.csproj
@@ -21,6 +21,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+
     <PackageReference Include="kisslog.AspNetCore" Version="2.5.6" />
 
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
