--- a/src/Cooperchip.ITDeveloper.Data/Cooperchip.ITDeveloper.Data.csproj
+++ b/src/Cooperchip.ITDeveloper.Data/Cooperchip.ITDeveloper.Data.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
