--- a/src/Cooperchip.ITDeveloper.Domain/Cooperchip.ITDeveloper.Domain.csproj
+++ b/src/Cooperchip.ITDeveloper.Domain/Cooperchip.ITDeveloper.Domain.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.2.2" />
+    <PackageReference Include="mediatr" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Cooperchip.ITDeveloper.DomainCore\Cooperchip.ITDeveloper.DomainCore.csproj" />
   </ItemGroup>
 
