Notification Pattern Implemented => NeedTests

--- a/src/Cooperchip.ITDeveloper.Domain/Cooperchip.ITDeveloper.Domain.csproj
+++ b/src/Cooperchip.ITDeveloper.Domain/Cooperchip.ITDeveloper.Domain.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Cooperchip.ITDeveloper.DomainCore\Cooperchip.ITDeveloper.DomainCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mensageria\Mediators\" />
+  </ItemGroup>
+
 </Project>
